# array

./: Array_PRs.xlsx  README.md  Selenium Automation 1.pptx
backend/: .gitattributes  .gitignore  README.md
backend/.devcontainer/: devcontainer.json
backend/app/: .env.example  main.py  startup.py
backend/app/config/: __init__.py  cors.py  settings.py
backend/app/controllers/: csv_chat_controller.py  search_controller.py
backend/app/models/: api_models.py
backend/app/router/: chat_router.py  constants.py
backend/app/services/bot/: index_service.py
backend/app/services/csv/: csv_chart_service.py  csv_chat_service.py  utils.py
chatbot-ai/: Pipfile  README.md  pytest.ini  requirements.txt
chatbot-ai-v1/: .env.example  .gitignore  Dockerfile.dev  LICENSE  README.md  build.sh
chatbot-ai-v1/.github/: pull_request_template.md
chatbot-ai-v1/.github/workflows/: auto-deployment.yaml  branch-deployment.yaml  unit-testing.yaml
chatbot-ai-v1/dockerfiles/: .dockerignore.dev  .dockerignore.local  .dockerignore.prod  Dockerfile.ci  Dockerfile.dev  Dockerfile.local  entrypoint_local.sh
chatbot-ai-v1/prototype/: chat-bot.ipynb  langsmith_testing.ipynb
chatbot-ai-v1/prototype/backend_server/: app.py  auth.py  schema.py  utils.py
chatbot-ai-v1/prototype/common/: chain_generator.py  constants.py  prompts.py  utils.py
chatbot-ai-v1/prototype/config/: config_BedrockPinecone.json  config_BedrockPinecone_Volume_1_to_2.json  config_BedrockSolution.json  config_GPTPineconeSolution_Volume_1_rules_meta.json  config_GPTPineconeSolution_Volume_1_rules_meta_curated_test.json  config_GPTPineconeSolution_Volume_1_rules_meta_curated_test_12_doc.json  config_GPTPineconeSolution_Volume_1_rules_meta_curated_test_12_doc_bed.json  config_GPTPineconeSolution_cleaned_v0.json  config_GPTPineconeSolution_cleaned_v01.json  config_GPTPineconeSolution_cleaned_v02.json  config_GPTPineconeSolution_cleaned_v03_k8mmr.json  config_GPTPineconeSolution_cleaned_v0_k8mmr.json  config_GPTPineconeSolution_embed_large.json
chatbot-ai-v1/prototype/evaluation/: deepeval_custom.py  evaluators.py  judge_models.py  test.py
chatbot-ai-v1/prototype/evaluation/datasets/: source_qa-noise-short.csv  source_qa-noise.csv  source_qa_v3.csv
chatbot-ai-v1/tests/prototype_test/: conftest.py
chatbot-ai-v1/tests/prototype_test/backend_server_test/: app_test.py  conftest.py
chatbot-ai-v1/tests/prototype_test/common_test/: chain_generator_test.py  conftest.py  solutions_test.py  utils_test.py
chatbot-ai-v1/tests/prototype_test/evaluation_test/: conftest.py  evaluators_test.py  model_test.py
chatbot-ai/.devcontainer/: devcontainer.json  docker-compose.yml
chatbot-ai/.devcontainer/python/: Dockerfile
chatbot-ai/src/: logs.py  settings.py
chatbot-ai/src/backend_server/: app.py  auth.py  schema.py  utils.py
chatbot-ai/src/common/: chain_generator.py  utils.py
chatbot-ai/src/config/: config_BedrockOpensearch.json
data/: .env.example  .gitignore  README.md  pyproject.toml
data/app/: logger.py  main.py  settings.py
data/app/models/: schemas.py
data/app/routers/: parser.py
data/app/services/: parser.py
frontend/: .dockerignore  README.md  dockerfile  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: middleware.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/app/chatbot/: page.tsx
frontend/src/app/knowledge-base/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/search-engine/: page.tsx
frontend/src/app/smart-search/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/: ScraperModal.tsx  add-content-modal.tsx  create-folder-modal.tsx  document-card.tsx  flowting-elements-background.tsx  login-form.tsx  sidebar.tsx  texteditor.tsx
frontend/src/components/chatbot/: chat-history-display.tsx  chat-input.tsx  chat-message.tsx  chat-right-sidebar.tsx  chat-suggestions.tsx  knowledge-base-card.tsx  knowledge-base-selector.tsx
frontend/src/components/data/: constants.tsx
frontend/src/components/knowledge-base/: document-card.tsx  document-content-display.tsx  document-info-card.tsx  document-list.tsx  document-sections-metadata.tsx  document-viewer.tsx  documents-sections-nav.tsx  empty-state.tsx  folder-view-header.tsx  knowledge-base-card.tsx  knowledge-base-header.tsx  knowledge-base-list.tsx  knowledge-base-selector.tsx  mobile-header.tsx  stats-grid.tsx
frontend/src/components/layouts/: document-layout.tsx
frontend/src/components/navigation/: nav-link.tsx
frontend/src/components/search/: date-range-picker.tsx  result-card.tsx  skeleton-loader.tsx  smart-search-ui.tsx
frontend/src/components/ui/: animated-background-elements.tsx  array-logo.tsx  badge.tsx  button.tsx  card.tsx  dropdown-menu.tsx  feature-card.tsx  input.tsx  label.tsx  (+2 more)
frontend/src/config/: appConfig.ts
frontend/src/hooks/: useSearch.ts
frontend/src/types/: index.ts  opensearch.ts
jade-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bitbucket-pipelines.yml  compose.yaml  pyproject.toml  requirements.txt
jade-backend/.devcontainer/: Dockerfile  devcontainer.json
jade-backend/app/: .gitignore  logger.py  main.py  startup.py
jade-backend/app/config/: __init__.py  cors.py  settings.py
jade-backend/app/controllers/: chat_controller.py  search_controller.py
jade-backend/app/core/: app_factory.py  lifespan.py  session_store.py
jade-backend/app/models/: api_models.py
jade-backend/app/prompts/: queries.py  query_prompt.py
jade-backend/app/router/: csv_chat_router.py  health_router.py  search_router.py
jade-backend/app/routes/: chat_routes.py  search_routes.py
jade-backend/app/services/bot/: index_service.py  llm_service.py  metadata_extractor.py  volume_metadata.py  volume_selector.py
jade-backend/app/services/csv/: constants.py  csv_pdf_parser.py
jade-backend/app/services/search/: opensearch.py  pdf_parser.py
jade-backend/app/services/stores/: opensearch.py  s3.py
jade-backend/app/utils/: auth.py  file_utils.py
jade-backend/storage/trad_rag_index/: default__vector_store.json  docstore.json  index_store.json
(+11 files in other folders)
