[project]
name = "llamaindex-hrag-rulebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3==15.0.0",
    "aiobotocore==2.23.0",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aioitertools==0.12.0",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anthropic==0.56.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "banks==2.1.2",
    "beautifulsoup4==4.13.4",
    "black==25.1.0",
    "boto3==1.38.27",
    "botocore==1.38.27",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==45.0.4",
    "dataclasses-json==0.6.7",
    "deprecated==1.2.18",
    "dirtyjson==1.0.8",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "events==0.5",
    "fastapi==0.115.14",
    "filetype==1.2.0",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.25.1",
    "google-api-python-client==2.173.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-genai==1.21.1",
    "google-generativeai==0.8.5",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.3",
    "griffe==1.7.3",
    "grpcio==1.73.0",
    "grpcio-status==1.71.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jmespath==1.0.1",
    "joblib==1.5.1",
    "llama-cloud==0.1.26",
    "llama-cloud-services==0.6.34",
    "llama-index==0.12.43",
    "llama-index-agent-openai==0.4.11",
    "llama-index-cli==0.4.3",
    "llama-index-core==0.12.43",
    "llama-index-embeddings-bedrock==0.5.2",
    "llama-index-embeddings-google-genai==0.2.0",
    "llama-index-embeddings-openai==0.3.1",
    "llama-index-indices-managed-llama-cloud==0.7.7",
    "llama-index-instrumentation==0.2.0",
    "llama-index-llms-anthropic==0.6.19",
    "llama-index-llms-bedrock==0.3.8",
    "llama-index-llms-gemini==0.5.0",
    "llama-index-llms-google-genai==0.2.1",
    "llama-index-llms-openai==0.4.7",
    "llama-index-multi-modal-llms-openai==0.5.1",
    "llama-index-program-openai==0.3.2",
    "llama-index-question-gen-openai==0.3.1",
    "llama-index-readers-file==0.4.9",
    "llama-index-readers-llama-parse==0.4.0",
    "llama-index-workflows==0.2.2",
    "llama-parse==0.6.34",
    "markupsafe==3.0.2",
    "marshmallow==3.26.1",
    "multidict==6.5.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "nltk==3.9.1",
    "numpy==2.3.1",
    "openai==1.90.0",
    "opensearch==0.9.2",
    "opensearch-py==3.0.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "pdfminer-six==20250506",
    "pdfplumber==0.11.7",
    "pillow==10.4.0",
    "platformdirs==4.3.8",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pyparsing==3.2.3",
    "pypdf==5.6.1",
    "pypdfium2==4.30.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "rsa==4.9.1",
    "s3transfer==0.13.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.41",
    "starlette==0.46.2",
    "striprtf==0.0.26",
    "tenacity==8.5.0",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "yarl==1.20.1",
]
