[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jade-backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3==15.0.0",
    "aiofiles==24.1.0",
    "anyio==4.9.0",
    "beautifulsoup4==4.13.4",
    "black==25.1.0",
    "botocore==1.38.27",
    "dotenv==0.9.9",
    "faiss-cpu==1.11.0",
    "fastapi==0.115.14",
    "jmespath==1.0.1",
    "langchain-core==0.3.66",
    "langchain-aws==0.2.27",
    "langchain-community==0.3.27",
    "llama-index==0.12.43",
    "llama-index-agent-openai==0.4.11",
    "llama-index-cli==0.4.3",
    "llama-index-core==0.12.43",
    "llama-index-embeddings-bedrock==0.5.2",
    "llama-index-embeddings-google-genai==0.2.0",
    "llama-index-embeddings-openai==0.3.1",
    "llama-index-indices-managed-llama-cloud==0.7.7",
    "llama-index-llms-anthropic==0.6.19",
    "llama-index-llms-bedrock==0.3.8",
    "llama-index-llms-gemini==0.5.0",
    "llama-index-llms-google-genai==0.2.1",
    "llama-index-llms-openai==0.4.7",
    "llama-index-multi-modal-llms-openai==0.5.1",
    "llama-index-program-openai==0.3.2",
    "llama-index-question-gen-openai==0.3.1",
    "llama-index-readers-file==0.4.9",
    "llama-index-readers-llama-parse==0.4.0",
    "opensearch-py==3.0.0",
    "pandas==2.2.3",
    "pdfplumber==0.11.7",
    "pip==25.1.1",
    "pydantic==2.11.7",
    "python-dotenv==1.1.0",
    "python-jose>=3.5.0",
    "uv==0.7.19",
    "uvicorn==0.35.0",
    "pylint>=3.3.7",
    "tabulate>=0.9.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.7",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
"" = "."

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false